# pdi-timetracker

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  flask_app.py  main.py  pyproject.toml  test_main.py  timetracker.db
models/: __init__.py  employee.py  time_entry.py
static/: basic.css  login.css  main.css  reporting.css  style.css
templates/: add_time_entry.html  index.html  login.html  main.html  report.html  reporting.html
