[project]
name = "pdi-timetracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.3",
    "rich>=14.2.0",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.21",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "pytest>=8.4.2",
    "typing-extensions>=4.15.0",
]
